<resources>
    <string name="app_name" translatable="false">Todo App Yandex</string>
    <string name="urgency_icon">Urgency icon</string>
    <string name="info_button">Info Button</string>
    <string name="todo_list_title">My Tasks</string>
    <string name="show_done_tasks">Show done tasks</string>
    <string name="add_todo">Add Todo</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="todo_text_prompt">Enter task text</string>
    <string name="urgency">Urgency</string>
    <string name="make_until_placeholder">Make until: %1$s</string>
    <string name="make_until">Make until</string>
    <string name="delete">Delete</string>
    <string name="tasks_done">Tasks done: %1$d</string>
    <string name="no_data">No data</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="todo_not_found">Todo not found</string>
    <string name="low_urgency">Low</string>
    <string name="standard_urgency">Standard</string>
    <string name="high_urgency">High</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unable_to_perform">Synchronization error</string>
    <string name="update_todos">Update todos</string>
    <string name="connection_error">Internet connection error</string>
    <string name="server_error">Server error occurred</string>
    <string name="retry">Retry</string>
    <string name="app_theme">App theme</string>
    <string name="back_button">Back</string>
    <string name="settings_button">Settings</string>
    <string name="dark_theme_name">Dark</string>
    <string name="light_theme_name">Light</string>
    <string name="system_theme_name">System</string>
    <string name="choose_urgency">Choose task urgency</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_setting_description">Notifications will be shown at 00:00 of the task deadline day</string>
    <string name="notification_channel_name">Deadline notifications</string>
    <string name="notification_channel_description">Will show notification at 00:00 if there is any deadline today</string>
    <string name="deadline_notification_title">Task deadline</string>
    <string name="deadline_notification_description">Task: %1$s; Urgency: %2$s</string>
</resources>